--- a/build
+++ b/build
@@ -11,8 +11,9 @@ ccache -M 20G
 ccache -o compression=true
 ccache -z
 
-mka nad -j8 &
-sleep 90m
-kill %1
-ccache -s
-#mka nad -j8
+#mka nad -j8 &
+#sleep 90m
+#kill %1
+#ccache -s
+
+mka nad -j8
