--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,12 +1,12 @@
 env: # Environment variables to pass to all tasks
     CIRRUS_CLONE_DEPTH: 1 # No need to clone with the whole history
-    CIRRUS_WORKING_DIR: "/tmp/ci" # Where to clone the aosp-builder repo
+    CIRRUS_WORKING_DIR: "/tmp/ci" # Where to clone the xdroid-CAF-builder repo
 
 task:
-    name: aosp # Project name
+    name: xdroid-CAF # Project name
     timeout_in: 50h
     container:
-        image: apon77/aosp:cirrus
+        image: dopaemon/bionic:latest
         cpu: 16
         memory: 64G
     sync_script: # To sync source
