--- a/build
+++ b/build
@@ -7,9 +7,9 @@ rm -rf out
 . build/envsetup.sh
 lunch xdroid_X01BD-userdebug
 export USE_CCACHE=1
-ccache -M 60G
-make xd -j8 aapt
+ccache -M 32G
+make xd -j$(nproc --all)
 
 brunch xdroid_X01BD-userdebug
 
-curl --upload-file ./out/target/product/X01BD/*.zip  https://transfer.sh/xdroid.zip
+curl --upload-file ./out/target/product/X01BD/*.zip  https://transfer.sh/xd_rev1.1.redstone.UNOFFICIAL-X01BD-20210725-0321.zip
