--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env: # Environment variables to pass to all tasks
 
 task:
     name: xdroid-CAF # Project name
-    timeout_in: 3h
+    timeout_in: 122m
     container:
         image: dopaemon/bionic:latest
         cpu: 8
