--- a/build
+++ b/build
@@ -3,7 +3,7 @@
 cd /tmp/rom
 
 . build/envsetup.sh
-lunch nad_juice-userdebug
+lunch xdroid_X01BD-userdebug
 export CCACHE_DIR=/tmp/ccache
 export CCACHE_EXEC=$(which ccache)
 export USE_CCACHE=1
@@ -11,9 +11,9 @@ ccache -M 20G
 ccache -o compression=true
 ccache -z
 
-#mka nad -j8 &
+#make xd -j8 &
 #sleep 90m
 #kill %1
 #ccache -s
 
-mka nad -j8
+make xd -j8
