--- a/build
+++ b/build
@@ -11,9 +11,9 @@ ccache -M 20G
 ccache -o compression=true
 ccache -z
 
-#mka xd -j8 &
+#make xd -j8 &
 #sleep 90m
 #kill %1
 #ccache -s
 
-mka xd -j8
+make xd -j8
